--- a/src/app/recipes/my-recipes/my-recipes.component.html
+++ b/src/app/recipes/my-recipes/my-recipes.component.html
@@ -1,1 +1,43 @@
-<p>my-recipes works!</p>
+<section>
+    <div *ngIf="authService.hasError" class="error-container">
+        <p class="error-message">
+            {{authService.hasError}}
+        </p>
+        <div class="buttons-container">
+            <button class="button" (click)="recipeService.handleClearError()">
+                OK
+            </button>
+        </div>
+    </div>
+    <div class="list-container" *ngIf="!authService.hasError">
+        <h3>Here you can find the full list of recipes</h3>
+        <div class="buttons-container">
+            <button class="button" (click)="handleSorting()">Sort by {{sortingType === 'newest' ? 'oldest':
+                'newest'}}</button>
+        </div>
+        <h3>Sorted by {{sortingType}}</h3>
+        <ul class="card-container" role="list">
+            <li class="card" *ngFor="let recipe of myRecipes">
+                <!-- this can be used instead of the one above[routerLink]="['/recipe','details', recipe._id]"-->
+                <div class="header-container">
+                    <a routerLink='/recipe/details/{{recipe._id}}'>
+                        {{recipe.name}}
+                    </a>
+                </div>
+                <div class="card-body">
+                    <a routerLink='/recipe/details/{{recipe._id}}'>
+                        <div class="pic-container">
+                            <img src={{recipe.image}} alt="#" class="dummie-pic">
+                        </div>
+                    </a>
+                </div>
+
+                <div class="buttons-container">
+                    <a class="button" href="recipe/edit/{{recipe._id}}">Edit</a>
+                    <a class="button" href="#">Delete</a>
+                </div>
+                <span class="bar"></span>
+            </li>
+        </ul>
+    </div>
+</section>
