--- a/src/app/core/macros/macros.component.scss
+++ b/src/app/core/macros/macros.component.scss
@@ -2,6 +2,68 @@
   width: 100%;
   height: 100vh;
 }
+.error-container {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: 1000;
+  padding: 5px;
+  border: 1px solid black;
+  background-color: rgb(255 0 0);
+  border-radius: 10px;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  .error-message {
+    font-size: 2rem;
+    color: rgb(0 0 0);
+  }
+  .button {
+    text-shadow: -1px 2px 1px black;
+    font-size: 1em;
+    background: black;
+    color: coral;
+    border: 1px solid #ffffff;
+    padding: 4px;
+    margin: 5px;
+    border-radius: 10px;
+    font-weight: 650;
+    text-decoration: none;
+    letter-spacing: 1px;
+    transition: all 200ms ease-in-out;
+  }
+
+  .button:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 10px white, 0px 0px 10px coral;
+  }
+  .button:active {
+    color: black;
+    background-color: white;
+    box-shadow: 0px 0px 10px coral, 0px 0px 10px rgb(255, 255, 255);
+  }
+}
+.no-content {
+  max-width: 80%;
+  margin: 2rem auto;
+  background-color: rgba(0, 0, 0, 0.7411764706);
+  backdrop-filter: blur(5px);
+  padding: 2.5rem 0.5rem;
+  border-radius: 15px;
+  border: 1px solid coral;
+  p {
+    color: coral;
+    font-size: 1.3rem;
+    text-align: center;
+    word-break: break-word;
+    white-space: normal;
+    text-overflow: ellipsis;
+  }
+}
 .table-container {
   width: 100%;
   max-width: 80%;
@@ -45,10 +107,39 @@
     thead {
       text-align: left;
       position: relative;
+      .table-header-buttons {
+        th {
+          text-align: center;
+        }
+        button {
+          text-shadow: -1px 2px 1px black;
+          font-size: 1.2em;
+          background: black;
+          color: coral;
+          border: 1px solid #000000;
+          margin: 5px;
+          border-radius: 10px;
+          font-weight: 650;
+          text-decoration: none;
+          letter-spacing: 1px;
+          box-shadow: 0px 0px 10px rgb(0, 0, 0), 0px 0px 10px rgb(255, 255, 255, 55);
+          transition: all 200ms ease-in-out;
+        }
+        button:hover {
+          cursor: pointer;
+          box-shadow: 0px 0px 10px rgb(255, 255, 255), 0px 0px 10px coral;
+        }
 
+        button:active {
+          background-color: rgb(255, 255, 255);
+          color: rgb(0, 0, 0);
+          box-shadow: 0px 0px 10px rgb(255, 255, 255), 0px 0px 10px coral;
+        }
+      }
       .table-header {
         position: sticky;
-        top: 4rem;
+        top: 4.5rem;
+
         th {
           white-space: nowrap;
           color: black;
