--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -10,7 +10,7 @@
       <button class="button" (click)="authService.handleClearError()">
         OK
       </button>
-      <button *ngIf="!authService.isLogged" class="button" routerLink="auth/login">Login</button>
+      <button *ngIf="!authService.isLogged && homePageRecipes" class="button" routerLink="auth/login">Login</button>
     </p>
   </div>
   <div class="banner-container">
