--- a/src/app/recipes/browse/list.component.scss
+++ b/src/app/recipes/browse/list.component.scss
@@ -40,6 +40,24 @@ section {
       box-shadow: 0px 0px 10px coral, 0px 0px 10px rgb(255, 255, 255);
     }
   }
+  .no-content {
+    max-width: 80%;
+    margin: 2rem auto;
+    background-color: rgba(0, 0, 0, 0.7411764706);
+    backdrop-filter: blur(5px);
+    padding: 2.5rem 0.5rem;
+    border-radius: 15px;
+    border: 1px solid coral;
+    p {
+      color: coral;
+      font-size: 1.3rem;
+      text-align: center;
+      word-break: break-word;
+      white-space: normal;
+      text-overflow: ellipsis;
+    }
+  }
+
   .button {
     text-shadow: -1px 2px 1px black;
     font-size: 1em;
