--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -2,10 +2,19 @@
   background-color: white;
 }
 .error-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  z-index: 1000;
+  border: 1px solid black;
+  padding: 5px;
+  background-color: rgb(255 0 0);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
   .error-message {
-    font-size: 1.5rem;
-    color: rgb(255, 0, 0);
+    font-size: 2rem;
+    color: rgb(0 0 0);
   }
   .button {
     text-shadow: -1px 2px 1px black;
