--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -50,7 +50,23 @@
   margin: auto;
   border-radius: 10px;
 }
-
+.no-content {
+  max-width: 80%;
+  margin: 2rem auto;
+  background-color: rgba(0, 0, 0, 0.7411764706);
+  backdrop-filter: blur(5px);
+  padding: 2.5rem 0.5rem;
+  border-radius: 15px;
+  border: 1px solid coral;
+  p {
+    color: coral;
+    font-size: 1.3rem;
+    text-align: center;
+    word-break: break-word;
+    white-space: normal;
+    text-overflow: ellipsis;
+  }
+}
 section {
   width: 100%;
 
@@ -152,6 +168,23 @@ section {
         p {
           color: white;
           margin: 10px;
+        }
+
+        .text-container {
+          display: flex;
+          width: 100%;
+          flex-direction: column;
+          flex-wrap: wrap;
+
+          p {
+            color: white;
+            font-size: 1rem;
+            text-align: left;
+            max-width: 90%;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+          }
         }
       }
 
